--- a/choropleth.ipynb
+++ b/choropleth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,6 @@
     "Code Purpose: Creating dashboard that contain choropleth maps\n",
     "'''\n",
     "from dash import Dash, html, dcc, callback, Output, Input\n",
-    "import numpy as np\n",
     "import pandas as pd\n",
     "import plotly.express as px\n",
     "import plotly.graph_objects as go"
@@ -23,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
@@ -50,6 +49,7 @@
    ],
    "source": [
     "app = Dash()\n",
+    "server = app.server\n",
     "\n",
     "app.layout = html.Div([\n",
     "    html.H1(children = 'FIFA Winners Dashboard', style = {'textAlign':'center'}),\n",
