--- a/choropleth.ipynb
+++ b/choropleth.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -40,7 +40,7 @@
        "        "
       ],
       "text/plain": [
-       "<IPython.lib.display.IFrame at 0x176e6167a90>"
+       "<IPython.lib.display.IFrame at 0x176e5da2990>"
       ]
      },
      "metadata": {},
@@ -48,7 +48,7 @@
     }
    ],
    "source": [
-    "app = Dash()\n",
+    "app = Dash(__name__)\n",
     "server = app.server\n",
     "\n",
     "app.layout = html.Div([\n",
